// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaults all nullable fields to null when defaultNullableToNull is set 1`] = `
"
export const anAvatar = (overrides?: Partial<Avatar>): Avatar => {
    return {
        id: '0550ff93-dd31-49b4-8c38-ff1cb68bdc38',
        url: 'aliquid',
        ...overrides,
    };
};

export const aUser = (overrides?: Partial<User>): User => {
    return {
        id: 'a5756f00-41a6-422a-8a7d-d13ee6a63750',
        creationDate: '1970-01-09T16:33:21.532Z',
        login: 'libero',
        avatar: null,
        status: Status.Online,
        customStatus: null,
        scalarValue: 'neque',
        camelCaseThing: null,
        unionThing: null,
        prefixedEnum: null,
        ...overrides,
    };
};

export const aWithAvatar = (overrides?: Partial<WithAvatar>): WithAvatar => {
    return {
        id: '89f515e7-31e0-461d-a230-c4c7f4dafc5c',
        avatar: null,
        ...overrides,
    };
};

export const aCamelCaseThing = (overrides?: Partial<CamelCaseThing>): CamelCaseThing => {
    return {
        id: '345b9cf9-00fa-4974-800f-aeee5ee7fd42',
        ...overrides,
    };
};

export const aPrefixedResponse = (overrides?: Partial<PrefixedResponse>): PrefixedResponse => {
    return {
        ping: 'sunt',
        ...overrides,
    };
};

export const anAbcType = (overrides?: Partial<AbcType>): AbcType => {
    return {
        abc: 'sit',
        ...overrides,
    };
};

export const aListType = (overrides?: Partial<ListType>): ListType => {
    return {
        stringList: ['voluptatem'],
        nullableStringList: null,
        ...overrides,
    };
};

export const anUpdateUserInput = (overrides?: Partial<UpdateUserInput>): UpdateUserInput => {
    return {
        id: '1d6a9360-c92b-4660-8e5f-04155047bddc',
        login: null,
        avatar: null,
        ...overrides,
    };
};

export const aMutation = (overrides?: Partial<Mutation>): Mutation => {
    return {
        updateUser: null,
        ...overrides,
    };
};

export const aQuery = (overrides?: Partial<Query>): Query => {
    return {
        user: aUser(),
        prefixed_query: aPrefixedResponse(),
        ...overrides,
    };
};
"
`;

exports[`overriding works as expected when defaultNullableToNull is true 1`] = `
"
export const anAvatar = (overrides?: Partial<Avatar>): Avatar => {
    return {
        id: '0550ff93-dd31-49b4-8c38-ff1cb68bdc38',
        url: 'aliquid',
        ...overrides,
    };
};

export const aUser = (overrides?: Partial<User>): User => {
    return {
        id: 'a5756f00-41a6-422a-8a7d-d13ee6a63750',
        creationDate: '1970-01-09T16:33:21.532Z',
        login: 'libero',
        avatar: someAvatar,
        status: Status.Online,
        customStatus: 'abc',
        scalarValue: 'neque',
        camelCaseThing: null,
        unionThing: null,
        prefixedEnum: null,
        ...overrides,
    };
};

export const aWithAvatar = (overrides?: Partial<WithAvatar>): WithAvatar => {
    return {
        id: '89f515e7-31e0-461d-a230-c4c7f4dafc5c',
        avatar: null,
        ...overrides,
    };
};

export const aCamelCaseThing = (overrides?: Partial<CamelCaseThing>): CamelCaseThing => {
    return {
        id: '345b9cf9-00fa-4974-800f-aeee5ee7fd42',
        ...overrides,
    };
};

export const aPrefixedResponse = (overrides?: Partial<PrefixedResponse>): PrefixedResponse => {
    return {
        ping: 'sunt',
        ...overrides,
    };
};

export const anAbcType = (overrides?: Partial<AbcType>): AbcType => {
    return {
        abc: 'sit',
        ...overrides,
    };
};

export const aListType = (overrides?: Partial<ListType>): ListType => {
    return {
        stringList: ['voluptatem'],
        nullableStringList: ['abc'],
        ...overrides,
    };
};

export const anUpdateUserInput = (overrides?: Partial<UpdateUserInput>): UpdateUserInput => {
    return {
        id: '1d6a9360-c92b-4660-8e5f-04155047bddc',
        login: null,
        avatar: null,
        ...overrides,
    };
};

export const aMutation = (overrides?: Partial<Mutation>): Mutation => {
    return {
        updateUser: null,
        ...overrides,
    };
};

export const aQuery = (overrides?: Partial<Query>): Query => {
    return {
        user: aUser(),
        prefixed_query: aPrefixedResponse(),
        ...overrides,
    };
};
"
`;

exports[`should add custom prefix if the \`prefix\` config option is specified 1`] = `
"
export const mockAvatar = (overrides?: Partial<Avatar>): Avatar => {
    return {
        id: '0550ff93-dd31-49b4-8c38-ff1cb68bdc38',
        url: 'aliquid',
        ...overrides,
    };
};

export const mockUser = (overrides?: Partial<User>): User => {
    return {
        id: 'a5756f00-41a6-422a-8a7d-d13ee6a63750',
        creationDate: '1970-01-09T16:33:21.532Z',
        login: 'libero',
        avatar: mockAvatar(),
        status: Status.Online,
        customStatus: AbcStatus.HasXyzStatus,
        scalarValue: 'neque',
        camelCaseThing: mockCamelCaseThing(),
        unionThing: mockAvatar(),
        prefixedEnum: PrefixedEnum.PrefixedValue,
        ...overrides,
    };
};

export const mockWithAvatar = (overrides?: Partial<WithAvatar>): WithAvatar => {
    return {
        id: '89f515e7-31e0-461d-a230-c4c7f4dafc5c',
        avatar: mockAvatar(),
        ...overrides,
    };
};

export const mockCamelCaseThing = (overrides?: Partial<CamelCaseThing>): CamelCaseThing => {
    return {
        id: '345b9cf9-00fa-4974-800f-aeee5ee7fd42',
        ...overrides,
    };
};

export const mockPrefixedResponse = (overrides?: Partial<PrefixedResponse>): PrefixedResponse => {
    return {
        ping: 'sunt',
        ...overrides,
    };
};

export const mockAbcType = (overrides?: Partial<AbcType>): AbcType => {
    return {
        abc: 'sit',
        ...overrides,
    };
};

export const mockListType = (overrides?: Partial<ListType>): ListType => {
    return {
        stringList: ['voluptatem'],
        nullableStringList: ['eum'],
        ...overrides,
    };
};

export const mockUpdateUserInput = (overrides?: Partial<UpdateUserInput>): UpdateUserInput => {
    return {
        id: '1d6a9360-c92b-4660-8e5f-04155047bddc',
        login: 'qui',
        avatar: mockAvatar(),
        ...overrides,
    };
};

export const mockMutation = (overrides?: Partial<Mutation>): Mutation => {
    return {
        updateUser: mockUser(),
        ...overrides,
    };
};

export const mockQuery = (overrides?: Partial<Query>): Query => {
    return {
        user: mockUser(),
        prefixed_query: mockPrefixedResponse(),
        ...overrides,
    };
};
"
`;

exports[`should add enumsPrefix to all enums when option is specified 1`] = `
"
export const anAvatar = (overrides?: Partial<Avatar>): Avatar => {
    return {
        id: '0550ff93-dd31-49b4-8c38-ff1cb68bdc38',
        url: 'aliquid',
        ...overrides,
    };
};

export const aUser = (overrides?: Partial<User>): User => {
    return {
        id: 'a5756f00-41a6-422a-8a7d-d13ee6a63750',
        creationDate: '1970-01-09T16:33:21.532Z',
        login: 'libero',
        avatar: anAvatar(),
        status: Api.Status.Online,
        customStatus: Api.AbcStatus.HasXyzStatus,
        scalarValue: 'neque',
        camelCaseThing: aCamelCaseThing(),
        unionThing: anAvatar(),
        prefixedEnum: Api.PrefixedEnum.PrefixedValue,
        ...overrides,
    };
};

export const aWithAvatar = (overrides?: Partial<WithAvatar>): WithAvatar => {
    return {
        id: '89f515e7-31e0-461d-a230-c4c7f4dafc5c',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aCamelCaseThing = (overrides?: Partial<CamelCaseThing>): CamelCaseThing => {
    return {
        id: '345b9cf9-00fa-4974-800f-aeee5ee7fd42',
        ...overrides,
    };
};

export const aPrefixedResponse = (overrides?: Partial<PrefixedResponse>): PrefixedResponse => {
    return {
        ping: 'sunt',
        ...overrides,
    };
};

export const anAbcType = (overrides?: Partial<AbcType>): AbcType => {
    return {
        abc: 'sit',
        ...overrides,
    };
};

export const aListType = (overrides?: Partial<ListType>): ListType => {
    return {
        stringList: ['voluptatem'],
        nullableStringList: ['eum'],
        ...overrides,
    };
};

export const anUpdateUserInput = (overrides?: Partial<UpdateUserInput>): UpdateUserInput => {
    return {
        id: '1d6a9360-c92b-4660-8e5f-04155047bddc',
        login: 'qui',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aMutation = (overrides?: Partial<Mutation>): Mutation => {
    return {
        updateUser: aUser(),
        ...overrides,
    };
};

export const aQuery = (overrides?: Partial<Query>): Query => {
    return {
        user: aUser(),
        prefixed_query: aPrefixedResponse(),
        ...overrides,
    };
};
"
`;

exports[`should add enumsPrefix to imports 1`] = `
"import { Avatar, User, WithAvatar, CamelCaseThing, PrefixedResponse, AbcType, ListType, UpdateUserInput, Mutation, Query, Api } from './types/graphql';

export const anAvatar = (overrides?: Partial<Avatar>): Avatar => {
    return {
        id: '0550ff93-dd31-49b4-8c38-ff1cb68bdc38',
        url: 'aliquid',
        ...overrides,
    };
};

export const aUser = (overrides?: Partial<User>): User => {
    return {
        id: 'a5756f00-41a6-422a-8a7d-d13ee6a63750',
        creationDate: '1970-01-09T16:33:21.532Z',
        login: 'libero',
        avatar: anAvatar(),
        status: Api.Status.Online,
        customStatus: Api.AbcStatus.HasXyzStatus,
        scalarValue: 'neque',
        camelCaseThing: aCamelCaseThing(),
        unionThing: anAvatar(),
        prefixedEnum: Api.PrefixedEnum.PrefixedValue,
        ...overrides,
    };
};

export const aWithAvatar = (overrides?: Partial<WithAvatar>): WithAvatar => {
    return {
        id: '89f515e7-31e0-461d-a230-c4c7f4dafc5c',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aCamelCaseThing = (overrides?: Partial<CamelCaseThing>): CamelCaseThing => {
    return {
        id: '345b9cf9-00fa-4974-800f-aeee5ee7fd42',
        ...overrides,
    };
};

export const aPrefixedResponse = (overrides?: Partial<PrefixedResponse>): PrefixedResponse => {
    return {
        ping: 'sunt',
        ...overrides,
    };
};

export const anAbcType = (overrides?: Partial<AbcType>): AbcType => {
    return {
        abc: 'sit',
        ...overrides,
    };
};

export const aListType = (overrides?: Partial<ListType>): ListType => {
    return {
        stringList: ['voluptatem'],
        nullableStringList: ['eum'],
        ...overrides,
    };
};

export const anUpdateUserInput = (overrides?: Partial<UpdateUserInput>): UpdateUserInput => {
    return {
        id: '1d6a9360-c92b-4660-8e5f-04155047bddc',
        login: 'qui',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aMutation = (overrides?: Partial<Mutation>): Mutation => {
    return {
        updateUser: aUser(),
        ...overrides,
    };
};

export const aQuery = (overrides?: Partial<Query>): Query => {
    return {
        user: aUser(),
        prefixed_query: aPrefixedResponse(),
        ...overrides,
    };
};
"
`;

exports[`should add typesPrefix and enumsPrefix to imports 1`] = `
"import { Api } from './types/graphql';

export const anAvatar = (overrides?: Partial<Api.Avatar>): Api.Avatar => {
    return {
        id: '0550ff93-dd31-49b4-8c38-ff1cb68bdc38',
        url: 'aliquid',
        ...overrides,
    };
};

export const aUser = (overrides?: Partial<Api.User>): Api.User => {
    return {
        id: 'a5756f00-41a6-422a-8a7d-d13ee6a63750',
        creationDate: '1970-01-09T16:33:21.532Z',
        login: 'libero',
        avatar: anAvatar(),
        status: Api.Status.Online,
        customStatus: Api.AbcStatus.HasXyzStatus,
        scalarValue: 'neque',
        camelCaseThing: aCamelCaseThing(),
        unionThing: anAvatar(),
        prefixedEnum: Api.PrefixedEnum.PrefixedValue,
        ...overrides,
    };
};

export const aWithAvatar = (overrides?: Partial<Api.WithAvatar>): Api.WithAvatar => {
    return {
        id: '89f515e7-31e0-461d-a230-c4c7f4dafc5c',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aCamelCaseThing = (overrides?: Partial<Api.CamelCaseThing>): Api.CamelCaseThing => {
    return {
        id: '345b9cf9-00fa-4974-800f-aeee5ee7fd42',
        ...overrides,
    };
};

export const aPrefixedResponse = (overrides?: Partial<Api.PrefixedResponse>): Api.PrefixedResponse => {
    return {
        ping: 'sunt',
        ...overrides,
    };
};

export const anAbcType = (overrides?: Partial<Api.AbcType>): Api.AbcType => {
    return {
        abc: 'sit',
        ...overrides,
    };
};

export const aListType = (overrides?: Partial<Api.ListType>): Api.ListType => {
    return {
        stringList: ['voluptatem'],
        nullableStringList: ['eum'],
        ...overrides,
    };
};

export const anUpdateUserInput = (overrides?: Partial<Api.UpdateUserInput>): Api.UpdateUserInput => {
    return {
        id: '1d6a9360-c92b-4660-8e5f-04155047bddc',
        login: 'qui',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aMutation = (overrides?: Partial<Api.Mutation>): Api.Mutation => {
    return {
        updateUser: aUser(),
        ...overrides,
    };
};

export const aQuery = (overrides?: Partial<Api.Query>): Api.Query => {
    return {
        user: aUser(),
        prefixed_query: aPrefixedResponse(),
        ...overrides,
    };
};
"
`;

exports[`should add typesPrefix to all types when option is specified 1`] = `
"
export const anAvatar = (overrides?: Partial<Api.Avatar>): Api.Avatar => {
    return {
        id: '0550ff93-dd31-49b4-8c38-ff1cb68bdc38',
        url: 'aliquid',
        ...overrides,
    };
};

export const aUser = (overrides?: Partial<Api.User>): Api.User => {
    return {
        id: 'a5756f00-41a6-422a-8a7d-d13ee6a63750',
        creationDate: '1970-01-09T16:33:21.532Z',
        login: 'libero',
        avatar: anAvatar(),
        status: Status.Online,
        customStatus: AbcStatus.HasXyzStatus,
        scalarValue: 'neque',
        camelCaseThing: aCamelCaseThing(),
        unionThing: anAvatar(),
        prefixedEnum: PrefixedEnum.PrefixedValue,
        ...overrides,
    };
};

export const aWithAvatar = (overrides?: Partial<Api.WithAvatar>): Api.WithAvatar => {
    return {
        id: '89f515e7-31e0-461d-a230-c4c7f4dafc5c',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aCamelCaseThing = (overrides?: Partial<Api.CamelCaseThing>): Api.CamelCaseThing => {
    return {
        id: '345b9cf9-00fa-4974-800f-aeee5ee7fd42',
        ...overrides,
    };
};

export const aPrefixedResponse = (overrides?: Partial<Api.PrefixedResponse>): Api.PrefixedResponse => {
    return {
        ping: 'sunt',
        ...overrides,
    };
};

export const anAbcType = (overrides?: Partial<Api.AbcType>): Api.AbcType => {
    return {
        abc: 'sit',
        ...overrides,
    };
};

export const aListType = (overrides?: Partial<Api.ListType>): Api.ListType => {
    return {
        stringList: ['voluptatem'],
        nullableStringList: ['eum'],
        ...overrides,
    };
};

export const anUpdateUserInput = (overrides?: Partial<Api.UpdateUserInput>): Api.UpdateUserInput => {
    return {
        id: '1d6a9360-c92b-4660-8e5f-04155047bddc',
        login: 'qui',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aMutation = (overrides?: Partial<Api.Mutation>): Api.Mutation => {
    return {
        updateUser: aUser(),
        ...overrides,
    };
};

export const aQuery = (overrides?: Partial<Api.Query>): Api.Query => {
    return {
        user: aUser(),
        prefixed_query: aPrefixedResponse(),
        ...overrides,
    };
};
"
`;

exports[`should add typesPrefix to imports 1`] = `
"import { Api, AbcStatus, Status, PrefixedEnum } from './types/graphql';

export const anAvatar = (overrides?: Partial<Api.Avatar>): Api.Avatar => {
    return {
        id: '0550ff93-dd31-49b4-8c38-ff1cb68bdc38',
        url: 'aliquid',
        ...overrides,
    };
};

export const aUser = (overrides?: Partial<Api.User>): Api.User => {
    return {
        id: 'a5756f00-41a6-422a-8a7d-d13ee6a63750',
        creationDate: '1970-01-09T16:33:21.532Z',
        login: 'libero',
        avatar: anAvatar(),
        status: Status.Online,
        customStatus: AbcStatus.HasXyzStatus,
        scalarValue: 'neque',
        camelCaseThing: aCamelCaseThing(),
        unionThing: anAvatar(),
        prefixedEnum: PrefixedEnum.PrefixedValue,
        ...overrides,
    };
};

export const aWithAvatar = (overrides?: Partial<Api.WithAvatar>): Api.WithAvatar => {
    return {
        id: '89f515e7-31e0-461d-a230-c4c7f4dafc5c',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aCamelCaseThing = (overrides?: Partial<Api.CamelCaseThing>): Api.CamelCaseThing => {
    return {
        id: '345b9cf9-00fa-4974-800f-aeee5ee7fd42',
        ...overrides,
    };
};

export const aPrefixedResponse = (overrides?: Partial<Api.PrefixedResponse>): Api.PrefixedResponse => {
    return {
        ping: 'sunt',
        ...overrides,
    };
};

export const anAbcType = (overrides?: Partial<Api.AbcType>): Api.AbcType => {
    return {
        abc: 'sit',
        ...overrides,
    };
};

export const aListType = (overrides?: Partial<Api.ListType>): Api.ListType => {
    return {
        stringList: ['voluptatem'],
        nullableStringList: ['eum'],
        ...overrides,
    };
};

export const anUpdateUserInput = (overrides?: Partial<Api.UpdateUserInput>): Api.UpdateUserInput => {
    return {
        id: '1d6a9360-c92b-4660-8e5f-04155047bddc',
        login: 'qui',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aMutation = (overrides?: Partial<Api.Mutation>): Api.Mutation => {
    return {
        updateUser: aUser(),
        ...overrides,
    };
};

export const aQuery = (overrides?: Partial<Api.Query>): Api.Query => {
    return {
        user: aUser(),
        prefixed_query: aPrefixedResponse(),
        ...overrides,
    };
};
"
`;

exports[`should correctly generate the \`casual\` data for a function with arguments scalar mapping 1`] = `
"
export const anAvatar = (overrides?: Partial<Avatar>): Avatar => {
    return {
        id: '0550ff93-dd31-49b4-8c38-ff1cb68bdc38',
        url: 'aliquid',
        ...overrides,
    };
};

export const aUser = (overrides?: Partial<User>): User => {
    return {
        id: 'a5756f00-41a6-422a-8a7d-d13ee6a63750',
        creationDate: '1970-01-09T16:33:21.532Z',
        login: 'libero',
        avatar: anAvatar(),
        status: Status.Online,
        customStatus: AbcStatus.HasXyzStatus,
        scalarValue: '1977-06-26',
        camelCaseThing: aCamelCaseThing(),
        unionThing: anAvatar(),
        prefixedEnum: PrefixedEnum.PrefixedValue,
        ...overrides,
    };
};

export const aWithAvatar = (overrides?: Partial<WithAvatar>): WithAvatar => {
    return {
        id: '89f515e7-31e0-461d-a230-c4c7f4dafc5c',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aCamelCaseThing = (overrides?: Partial<CamelCaseThing>): CamelCaseThing => {
    return {
        id: '345b9cf9-00fa-4974-800f-aeee5ee7fd42',
        ...overrides,
    };
};

export const aPrefixedResponse = (overrides?: Partial<PrefixedResponse>): PrefixedResponse => {
    return {
        ping: 'sunt',
        ...overrides,
    };
};

export const anAbcType = (overrides?: Partial<AbcType>): AbcType => {
    return {
        abc: 'sit',
        ...overrides,
    };
};

export const aListType = (overrides?: Partial<ListType>): ListType => {
    return {
        stringList: ['voluptatem'],
        nullableStringList: ['eum'],
        ...overrides,
    };
};

export const anUpdateUserInput = (overrides?: Partial<UpdateUserInput>): UpdateUserInput => {
    return {
        id: '1d6a9360-c92b-4660-8e5f-04155047bddc',
        login: 'qui',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aMutation = (overrides?: Partial<Mutation>): Mutation => {
    return {
        updateUser: aUser(),
        ...overrides,
    };
};

export const aQuery = (overrides?: Partial<Query>): Query => {
    return {
        user: aUser(),
        prefixed_query: aPrefixedResponse(),
        ...overrides,
    };
};
"
`;

exports[`should correctly generate the \`casual\` data for a function with one argument scalar mapping 1`] = `
"
export const anAvatar = (overrides?: Partial<Avatar>): Avatar => {
    return {
        id: '0550ff93-dd31-49b4-8c38-ff1cb68bdc38',
        url: 'aliquid',
        ...overrides,
    };
};

export const aUser = (overrides?: Partial<User>): User => {
    return {
        id: 'a5756f00-41a6-422a-8a7d-d13ee6a63750',
        creationDate: '1970-01-09T16:33:21.532Z',
        login: 'libero',
        avatar: anAvatar(),
        status: Status.Online,
        customStatus: AbcStatus.HasXyzStatus,
        scalarValue: '1977-06-26',
        camelCaseThing: aCamelCaseThing(),
        unionThing: anAvatar(),
        prefixedEnum: PrefixedEnum.PrefixedValue,
        ...overrides,
    };
};

export const aWithAvatar = (overrides?: Partial<WithAvatar>): WithAvatar => {
    return {
        id: '89f515e7-31e0-461d-a230-c4c7f4dafc5c',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aCamelCaseThing = (overrides?: Partial<CamelCaseThing>): CamelCaseThing => {
    return {
        id: '345b9cf9-00fa-4974-800f-aeee5ee7fd42',
        ...overrides,
    };
};

export const aPrefixedResponse = (overrides?: Partial<PrefixedResponse>): PrefixedResponse => {
    return {
        ping: 'sunt',
        ...overrides,
    };
};

export const anAbcType = (overrides?: Partial<AbcType>): AbcType => {
    return {
        abc: 'sit',
        ...overrides,
    };
};

export const aListType = (overrides?: Partial<ListType>): ListType => {
    return {
        stringList: ['voluptatem'],
        nullableStringList: ['eum'],
        ...overrides,
    };
};

export const anUpdateUserInput = (overrides?: Partial<UpdateUserInput>): UpdateUserInput => {
    return {
        id: '1d6a9360-c92b-4660-8e5f-04155047bddc',
        login: 'qui',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aMutation = (overrides?: Partial<Mutation>): Mutation => {
    return {
        updateUser: aUser(),
        ...overrides,
    };
};

export const aQuery = (overrides?: Partial<Query>): Query => {
    return {
        user: aUser(),
        prefixed_query: aPrefixedResponse(),
        ...overrides,
    };
};
"
`;

exports[`should correctly generate the \`casual\` data for a non-string scalar mapping 1`] = `
"
export const anAvatar = (overrides?: Partial<Avatar>): Avatar => {
    return {
        id: '0550ff93-dd31-49b4-8c38-ff1cb68bdc38',
        url: 'aliquid',
        ...overrides,
    };
};

export const aUser = (overrides?: Partial<User>): User => {
    return {
        id: 'a5756f00-41a6-422a-8a7d-d13ee6a63750',
        creationDate: '1970-01-09T16:33:21.532Z',
        login: 'libero',
        avatar: anAvatar(),
        status: Status.Online,
        customStatus: AbcStatus.HasXyzStatus,
        scalarValue: [41,98,185],
        camelCaseThing: aCamelCaseThing(),
        unionThing: anAvatar(),
        prefixedEnum: PrefixedEnum.PrefixedValue,
        ...overrides,
    };
};

export const aWithAvatar = (overrides?: Partial<WithAvatar>): WithAvatar => {
    return {
        id: '89f515e7-31e0-461d-a230-c4c7f4dafc5c',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aCamelCaseThing = (overrides?: Partial<CamelCaseThing>): CamelCaseThing => {
    return {
        id: '345b9cf9-00fa-4974-800f-aeee5ee7fd42',
        ...overrides,
    };
};

export const aPrefixedResponse = (overrides?: Partial<PrefixedResponse>): PrefixedResponse => {
    return {
        ping: 'sunt',
        ...overrides,
    };
};

export const anAbcType = (overrides?: Partial<AbcType>): AbcType => {
    return {
        abc: 'sit',
        ...overrides,
    };
};

export const aListType = (overrides?: Partial<ListType>): ListType => {
    return {
        stringList: ['voluptatem'],
        nullableStringList: ['eum'],
        ...overrides,
    };
};

export const anUpdateUserInput = (overrides?: Partial<UpdateUserInput>): UpdateUserInput => {
    return {
        id: '1d6a9360-c92b-4660-8e5f-04155047bddc',
        login: 'qui',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aMutation = (overrides?: Partial<Mutation>): Mutation => {
    return {
        updateUser: aUser(),
        ...overrides,
    };
};

export const aQuery = (overrides?: Partial<Query>): Query => {
    return {
        user: aUser(),
        prefixed_query: aPrefixedResponse(),
        ...overrides,
    };
};
"
`;

exports[`should correctly generate the \`casual\` data for a scalar mapping of type string 1`] = `
"
export const anAvatar = (overrides?: Partial<Avatar>): Avatar => {
    return {
        id: '0550ff93-dd31-49b4-8c38-ff1cb68bdc38',
        url: 'aliquid',
        ...overrides,
    };
};

export const aUser = (overrides?: Partial<User>): User => {
    return {
        id: 'a5756f00-41a6-422a-8a7d-d13ee6a63750',
        creationDate: '1970-01-09T16:33:21.532Z',
        login: 'libero',
        avatar: anAvatar(),
        status: Status.Online,
        customStatus: AbcStatus.HasXyzStatus,
        scalarValue: 'Mohamed.Nader@Kiehn.io',
        camelCaseThing: aCamelCaseThing(),
        unionThing: anAvatar(),
        prefixedEnum: PrefixedEnum.PrefixedValue,
        ...overrides,
    };
};

export const aWithAvatar = (overrides?: Partial<WithAvatar>): WithAvatar => {
    return {
        id: '89f515e7-31e0-461d-a230-c4c7f4dafc5c',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aCamelCaseThing = (overrides?: Partial<CamelCaseThing>): CamelCaseThing => {
    return {
        id: '345b9cf9-00fa-4974-800f-aeee5ee7fd42',
        ...overrides,
    };
};

export const aPrefixedResponse = (overrides?: Partial<PrefixedResponse>): PrefixedResponse => {
    return {
        ping: 'sunt',
        ...overrides,
    };
};

export const anAbcType = (overrides?: Partial<AbcType>): AbcType => {
    return {
        abc: 'sit',
        ...overrides,
    };
};

export const aListType = (overrides?: Partial<ListType>): ListType => {
    return {
        stringList: ['voluptatem'],
        nullableStringList: ['eum'],
        ...overrides,
    };
};

export const anUpdateUserInput = (overrides?: Partial<UpdateUserInput>): UpdateUserInput => {
    return {
        id: '1d6a9360-c92b-4660-8e5f-04155047bddc',
        login: 'qui',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aMutation = (overrides?: Partial<Mutation>): Mutation => {
    return {
        updateUser: aUser(),
        ...overrides,
    };
};

export const aQuery = (overrides?: Partial<Query>): Query => {
    return {
        user: aUser(),
        prefixed_query: aPrefixedResponse(),
        ...overrides,
    };
};
"
`;

exports[`should correctly use custom generator as default value 1`] = `
"
export const anAvatar = (overrides?: Partial<Avatar>): Avatar => {
    return {
        id: '0550ff93-dd31-49b4-8c38-ff1cb68bdc38',
        url: 'aliquid',
        ...overrides,
    };
};

export const aUser = (overrides?: Partial<User>): User => {
    return {
        id: 'a5756f00-41a6-422a-8a7d-d13ee6a63750',
        creationDate: '1970-01-09T16:33:21.532Z',
        login: 'libero',
        avatar: anAvatar(),
        status: Status.Online,
        customStatus: AbcStatus.HasXyzStatus,
        scalarValue: myValueGenerator(),
        camelCaseThing: aCamelCaseThing(),
        unionThing: anAvatar(),
        prefixedEnum: PrefixedEnum.PrefixedValue,
        ...overrides,
    };
};

export const aWithAvatar = (overrides?: Partial<WithAvatar>): WithAvatar => {
    return {
        id: '89f515e7-31e0-461d-a230-c4c7f4dafc5c',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aCamelCaseThing = (overrides?: Partial<CamelCaseThing>): CamelCaseThing => {
    return {
        id: '345b9cf9-00fa-4974-800f-aeee5ee7fd42',
        ...overrides,
    };
};

export const aPrefixedResponse = (overrides?: Partial<PrefixedResponse>): PrefixedResponse => {
    return {
        ping: 'sunt',
        ...overrides,
    };
};

export const anAbcType = (overrides?: Partial<AbcType>): AbcType => {
    return {
        abc: 'sit',
        ...overrides,
    };
};

export const aListType = (overrides?: Partial<ListType>): ListType => {
    return {
        stringList: ['voluptatem'],
        nullableStringList: ['eum'],
        ...overrides,
    };
};

export const anUpdateUserInput = (overrides?: Partial<UpdateUserInput>): UpdateUserInput => {
    return {
        id: '1d6a9360-c92b-4660-8e5f-04155047bddc',
        login: 'qui',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aMutation = (overrides?: Partial<Mutation>): Mutation => {
    return {
        updateUser: aUser(),
        ...overrides,
    };
};

export const aQuery = (overrides?: Partial<Query>): Query => {
    return {
        user: aUser(),
        prefixed_query: aPrefixedResponse(),
        ...overrides,
    };
};
"
`;

exports[`should generate dynamic values in mocks 1`] = `
"import casual from 'casual';

casual.seed(0);

export const anAvatar = (overrides?: Partial<Avatar>): Avatar => {
    return {
        id: casual.uuid,
        url: casual.word,
        ...overrides,
    };
};

export const aUser = (overrides?: Partial<User>): User => {
    return {
        id: casual.uuid,
        creationDate: new Date(casual.unix_time).toISOString(),
        login: casual.word,
        avatar: anAvatar(),
        status: Status.Online,
        customStatus: AbcStatus.HasXyzStatus,
        scalarValue: casual.word,
        camelCaseThing: aCamelCaseThing(),
        unionThing: anAvatar(),
        prefixedEnum: PrefixedEnum.PrefixedValue,
        ...overrides,
    };
};

export const aWithAvatar = (overrides?: Partial<WithAvatar>): WithAvatar => {
    return {
        id: casual.uuid,
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aCamelCaseThing = (overrides?: Partial<CamelCaseThing>): CamelCaseThing => {
    return {
        id: casual.uuid,
        ...overrides,
    };
};

export const aPrefixedResponse = (overrides?: Partial<PrefixedResponse>): PrefixedResponse => {
    return {
        ping: casual.word,
        ...overrides,
    };
};

export const anAbcType = (overrides?: Partial<AbcType>): AbcType => {
    return {
        abc: casual.word,
        ...overrides,
    };
};

export const aListType = (overrides?: Partial<ListType>): ListType => {
    return {
        stringList: [casual.word],
        nullableStringList: [casual.word],
        ...overrides,
    };
};

export const anUpdateUserInput = (overrides?: Partial<UpdateUserInput>): UpdateUserInput => {
    return {
        id: casual.uuid,
        login: casual.word,
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aMutation = (overrides?: Partial<Mutation>): Mutation => {
    return {
        updateUser: aUser(),
        ...overrides,
    };
};

export const aQuery = (overrides?: Partial<Query>): Query => {
    return {
        user: aUser(),
        prefixed_query: aPrefixedResponse(),
        ...overrides,
    };
};

export const seedMocks = (seed: number) => casual.seed(seed);
"
`;

exports[`should generate dynamic values with faker 1`] = `
"import { faker } from '@faker-js/faker';

faker.seed(0);

export const anAvatar = (overrides?: Partial<Avatar>): Avatar => {
    return {
        id: faker.datatype.uuid(),
        url: faker.lorem.word(),
        ...overrides,
    };
};

export const aUser = (overrides?: Partial<User>): User => {
    return {
        id: faker.datatype.uuid(),
        creationDate: faker.date.past(1, new Date(2022, 0)).toISOString(),
        login: faker.lorem.word(),
        avatar: anAvatar(),
        status: Status.Online,
        customStatus: AbcStatus.HasXyzStatus,
        scalarValue: faker.lorem.word(),
        camelCaseThing: aCamelCaseThing(),
        unionThing: anAvatar(),
        prefixedEnum: PrefixedEnum.PrefixedValue,
        ...overrides,
    };
};

export const aWithAvatar = (overrides?: Partial<WithAvatar>): WithAvatar => {
    return {
        id: faker.datatype.uuid(),
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aCamelCaseThing = (overrides?: Partial<CamelCaseThing>): CamelCaseThing => {
    return {
        id: faker.datatype.uuid(),
        ...overrides,
    };
};

export const aPrefixedResponse = (overrides?: Partial<PrefixedResponse>): PrefixedResponse => {
    return {
        ping: faker.lorem.word(),
        ...overrides,
    };
};

export const anAbcType = (overrides?: Partial<AbcType>): AbcType => {
    return {
        abc: faker.lorem.word(),
        ...overrides,
    };
};

export const aListType = (overrides?: Partial<ListType>): ListType => {
    return {
        stringList: [faker.lorem.word()],
        nullableStringList: [faker.lorem.word()],
        ...overrides,
    };
};

export const anUpdateUserInput = (overrides?: Partial<UpdateUserInput>): UpdateUserInput => {
    return {
        id: faker.datatype.uuid(),
        login: faker.lorem.word(),
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aMutation = (overrides?: Partial<Mutation>): Mutation => {
    return {
        updateUser: aUser(),
        ...overrides,
    };
};

export const aQuery = (overrides?: Partial<Query>): Query => {
    return {
        user: aUser(),
        prefixed_query: aPrefixedResponse(),
        ...overrides,
    };
};

export const seedMocks = (seed: number) => faker.seed(seed);
"
`;

exports[`should generate mock data functions 1`] = `
"
export const anAvatar = (overrides?: Partial<Avatar>): Avatar => {
    return {
        id: '0550ff93-dd31-49b4-8c38-ff1cb68bdc38',
        url: 'aliquid',
        ...overrides,
    };
};

export const aUser = (overrides?: Partial<User>): User => {
    return {
        id: 'a5756f00-41a6-422a-8a7d-d13ee6a63750',
        creationDate: '1970-01-09T16:33:21.532Z',
        login: 'libero',
        avatar: anAvatar(),
        status: Status.Online,
        customStatus: AbcStatus.HasXyzStatus,
        scalarValue: 'neque',
        camelCaseThing: aCamelCaseThing(),
        unionThing: anAvatar(),
        prefixedEnum: PrefixedEnum.PrefixedValue,
        ...overrides,
    };
};

export const aWithAvatar = (overrides?: Partial<WithAvatar>): WithAvatar => {
    return {
        id: '89f515e7-31e0-461d-a230-c4c7f4dafc5c',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aCamelCaseThing = (overrides?: Partial<CamelCaseThing>): CamelCaseThing => {
    return {
        id: '345b9cf9-00fa-4974-800f-aeee5ee7fd42',
        ...overrides,
    };
};

export const aPrefixedResponse = (overrides?: Partial<PrefixedResponse>): PrefixedResponse => {
    return {
        ping: 'sunt',
        ...overrides,
    };
};

export const anAbcType = (overrides?: Partial<AbcType>): AbcType => {
    return {
        abc: 'sit',
        ...overrides,
    };
};

export const aListType = (overrides?: Partial<ListType>): ListType => {
    return {
        stringList: ['voluptatem'],
        nullableStringList: ['eum'],
        ...overrides,
    };
};

export const anUpdateUserInput = (overrides?: Partial<UpdateUserInput>): UpdateUserInput => {
    return {
        id: '1d6a9360-c92b-4660-8e5f-04155047bddc',
        login: 'qui',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aMutation = (overrides?: Partial<Mutation>): Mutation => {
    return {
        updateUser: aUser(),
        ...overrides,
    };
};

export const aQuery = (overrides?: Partial<Query>): Query => {
    return {
        user: aUser(),
        prefixed_query: aPrefixedResponse(),
        ...overrides,
    };
};
"
`;

exports[`should generate mock data functions with casual 1`] = `
"
export const anAvatar = (overrides?: Partial<Avatar>): Avatar => {
    return {
        id: '0550ff93-dd31-49b4-8c38-ff1cb68bdc38',
        url: 'aliquid',
        ...overrides,
    };
};

export const aUser = (overrides?: Partial<User>): User => {
    return {
        id: 'a5756f00-41a6-422a-8a7d-d13ee6a63750',
        creationDate: '1970-01-09T16:33:21.532Z',
        login: 'libero',
        avatar: anAvatar(),
        status: Status.Online,
        customStatus: AbcStatus.HasXyzStatus,
        scalarValue: 'neque',
        camelCaseThing: aCamelCaseThing(),
        unionThing: anAvatar(),
        prefixedEnum: PrefixedEnum.PrefixedValue,
        ...overrides,
    };
};

export const aWithAvatar = (overrides?: Partial<WithAvatar>): WithAvatar => {
    return {
        id: '89f515e7-31e0-461d-a230-c4c7f4dafc5c',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aCamelCaseThing = (overrides?: Partial<CamelCaseThing>): CamelCaseThing => {
    return {
        id: '345b9cf9-00fa-4974-800f-aeee5ee7fd42',
        ...overrides,
    };
};

export const aPrefixedResponse = (overrides?: Partial<PrefixedResponse>): PrefixedResponse => {
    return {
        ping: 'sunt',
        ...overrides,
    };
};

export const anAbcType = (overrides?: Partial<AbcType>): AbcType => {
    return {
        abc: 'sit',
        ...overrides,
    };
};

export const aListType = (overrides?: Partial<ListType>): ListType => {
    return {
        stringList: ['voluptatem'],
        nullableStringList: ['eum'],
        ...overrides,
    };
};

export const anUpdateUserInput = (overrides?: Partial<UpdateUserInput>): UpdateUserInput => {
    return {
        id: '1d6a9360-c92b-4660-8e5f-04155047bddc',
        login: 'qui',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aMutation = (overrides?: Partial<Mutation>): Mutation => {
    return {
        updateUser: aUser(),
        ...overrides,
    };
};

export const aQuery = (overrides?: Partial<Query>): Query => {
    return {
        user: aUser(),
        prefixed_query: aPrefixedResponse(),
        ...overrides,
    };
};
"
`;

exports[`should generate mock data functions with external types file import 1`] = `
"import { Avatar, User, WithAvatar, CamelCaseThing, PrefixedResponse, AbcType, ListType, UpdateUserInput, Mutation, Query, AbcStatus, Status, PrefixedEnum } from './types/graphql';

export const anAvatar = (overrides?: Partial<Avatar>): Avatar => {
    return {
        id: '0550ff93-dd31-49b4-8c38-ff1cb68bdc38',
        url: 'aliquid',
        ...overrides,
    };
};

export const aUser = (overrides?: Partial<User>): User => {
    return {
        id: 'a5756f00-41a6-422a-8a7d-d13ee6a63750',
        creationDate: '1970-01-09T16:33:21.532Z',
        login: 'libero',
        avatar: anAvatar(),
        status: Status.Online,
        customStatus: AbcStatus.HasXyzStatus,
        scalarValue: 'neque',
        camelCaseThing: aCamelCaseThing(),
        unionThing: anAvatar(),
        prefixedEnum: PrefixedEnum.PrefixedValue,
        ...overrides,
    };
};

export const aWithAvatar = (overrides?: Partial<WithAvatar>): WithAvatar => {
    return {
        id: '89f515e7-31e0-461d-a230-c4c7f4dafc5c',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aCamelCaseThing = (overrides?: Partial<CamelCaseThing>): CamelCaseThing => {
    return {
        id: '345b9cf9-00fa-4974-800f-aeee5ee7fd42',
        ...overrides,
    };
};

export const aPrefixedResponse = (overrides?: Partial<PrefixedResponse>): PrefixedResponse => {
    return {
        ping: 'sunt',
        ...overrides,
    };
};

export const anAbcType = (overrides?: Partial<AbcType>): AbcType => {
    return {
        abc: 'sit',
        ...overrides,
    };
};

export const aListType = (overrides?: Partial<ListType>): ListType => {
    return {
        stringList: ['voluptatem'],
        nullableStringList: ['eum'],
        ...overrides,
    };
};

export const anUpdateUserInput = (overrides?: Partial<UpdateUserInput>): UpdateUserInput => {
    return {
        id: '1d6a9360-c92b-4660-8e5f-04155047bddc',
        login: 'qui',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aMutation = (overrides?: Partial<Mutation>): Mutation => {
    return {
        updateUser: aUser(),
        ...overrides,
    };
};

export const aQuery = (overrides?: Partial<Query>): Query => {
    return {
        user: aUser(),
        prefixed_query: aPrefixedResponse(),
        ...overrides,
    };
};
"
`;

exports[`should generate mock data functions with faker 1`] = `
"
export const anAvatar = (overrides?: Partial<Avatar>): Avatar => {
    return {
        id: '1550ff93-cd31-49b4-bc38-ef1cb68bdc38',
        url: 'aliquid',
        ...overrides,
    };
};

export const aUser = (overrides?: Partial<User>): User => {
    return {
        id: 'b5756f00-51a6-422a-9a7d-c13ee6a63750',
        creationDate: '2021-06-27T14:29:24.774Z',
        login: 'libero',
        avatar: anAvatar(),
        status: Status.Online,
        customStatus: AbcStatus.HasXyzStatus,
        scalarValue: 'neque',
        camelCaseThing: aCamelCaseThing(),
        unionThing: anAvatar(),
        prefixedEnum: PrefixedEnum.PrefixedValue,
        ...overrides,
    };
};

export const aWithAvatar = (overrides?: Partial<WithAvatar>): WithAvatar => {
    return {
        id: '99f515e7-21e0-461d-8230-d4c7f4dafc5c',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aCamelCaseThing = (overrides?: Partial<CamelCaseThing>): CamelCaseThing => {
    return {
        id: '245b9cf9-10fa-4974-900f-beee5ee7fd42',
        ...overrides,
    };
};

export const aPrefixedResponse = (overrides?: Partial<PrefixedResponse>): PrefixedResponse => {
    return {
        ping: 'sunt',
        ...overrides,
    };
};

export const anAbcType = (overrides?: Partial<AbcType>): AbcType => {
    return {
        abc: 'sit',
        ...overrides,
    };
};

export const aListType = (overrides?: Partial<ListType>): ListType => {
    return {
        stringList: ['voluptatem'],
        nullableStringList: ['eum'],
        ...overrides,
    };
};

export const anUpdateUserInput = (overrides?: Partial<UpdateUserInput>): UpdateUserInput => {
    return {
        id: '0d6a9360-d92b-4660-9e5f-14155047bddc',
        login: 'eos',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aMutation = (overrides?: Partial<Mutation>): Mutation => {
    return {
        updateUser: aUser(),
        ...overrides,
    };
};

export const aQuery = (overrides?: Partial<Query>): Query => {
    return {
        user: aUser(),
        prefixed_query: aPrefixedResponse(),
        ...overrides,
    };
};
"
`;

exports[`should generate mock data functions with scalars 1`] = `
"
export const anAvatar = (overrides?: Partial<Avatar>): Avatar => {
    return {
        id: '0550ff93-dd31-49b4-8c38-ff1cb68bdc38',
        url: 'aliquid',
        ...overrides,
    };
};

export const aUser = (overrides?: Partial<User>): User => {
    return {
        id: 'a5756f00-41a6-422a-8a7d-d13ee6a63750',
        creationDate: '1970-01-09T16:33:21.532Z',
        login: 'libero',
        avatar: anAvatar(),
        status: Status.Online,
        customStatus: AbcStatus.HasXyzStatus,
        scalarValue: 'neque',
        camelCaseThing: aCamelCaseThing(),
        unionThing: anAvatar(),
        prefixedEnum: PrefixedEnum.PrefixedValue,
        ...overrides,
    };
};

export const aWithAvatar = (overrides?: Partial<WithAvatar>): WithAvatar => {
    return {
        id: '89f515e7-31e0-461d-a230-c4c7f4dafc5c',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aCamelCaseThing = (overrides?: Partial<CamelCaseThing>): CamelCaseThing => {
    return {
        id: '345b9cf9-00fa-4974-800f-aeee5ee7fd42',
        ...overrides,
    };
};

export const aPrefixedResponse = (overrides?: Partial<PrefixedResponse>): PrefixedResponse => {
    return {
        ping: 'sunt',
        ...overrides,
    };
};

export const anAbcType = (overrides?: Partial<AbcType>): AbcType => {
    return {
        abc: 'sit',
        ...overrides,
    };
};

export const aListType = (overrides?: Partial<ListType>): ListType => {
    return {
        stringList: ['voluptatem'],
        nullableStringList: ['eum'],
        ...overrides,
    };
};

export const anUpdateUserInput = (overrides?: Partial<UpdateUserInput>): UpdateUserInput => {
    return {
        id: '1d6a9360-c92b-4660-8e5f-04155047bddc',
        login: 'qui',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aMutation = (overrides?: Partial<Mutation>): Mutation => {
    return {
        updateUser: aUser(),
        ...overrides,
    };
};

export const aQuery = (overrides?: Partial<Query>): Query => {
    return {
        user: aUser(),
        prefixed_query: aPrefixedResponse(),
        ...overrides,
    };
};
"
`;

exports[`should generate mock data with PascalCase enum values by default 1`] = `
"
export const anAvatar = (overrides?: Partial<Avatar>): Avatar => {
    return {
        id: '0550ff93-dd31-49b4-8c38-ff1cb68bdc38',
        url: 'aliquid',
        ...overrides,
    };
};

export const aUser = (overrides?: Partial<User>): User => {
    return {
        id: 'a5756f00-41a6-422a-8a7d-d13ee6a63750',
        creationDate: '1970-01-09T16:33:21.532Z',
        login: 'libero',
        avatar: anAvatar(),
        status: Status.Online,
        customStatus: AbcStatus.HasXyzStatus,
        scalarValue: 'neque',
        camelCaseThing: aCamelCaseThing(),
        unionThing: anAvatar(),
        prefixedEnum: PrefixedEnum.PrefixedValue,
        ...overrides,
    };
};

export const aWithAvatar = (overrides?: Partial<WithAvatar>): WithAvatar => {
    return {
        id: '89f515e7-31e0-461d-a230-c4c7f4dafc5c',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aCamelCaseThing = (overrides?: Partial<CamelCaseThing>): CamelCaseThing => {
    return {
        id: '345b9cf9-00fa-4974-800f-aeee5ee7fd42',
        ...overrides,
    };
};

export const aPrefixedResponse = (overrides?: Partial<PrefixedResponse>): PrefixedResponse => {
    return {
        ping: 'sunt',
        ...overrides,
    };
};

export const anAbcType = (overrides?: Partial<AbcType>): AbcType => {
    return {
        abc: 'sit',
        ...overrides,
    };
};

export const aListType = (overrides?: Partial<ListType>): ListType => {
    return {
        stringList: ['voluptatem'],
        nullableStringList: ['eum'],
        ...overrides,
    };
};

export const anUpdateUserInput = (overrides?: Partial<UpdateUserInput>): UpdateUserInput => {
    return {
        id: '1d6a9360-c92b-4660-8e5f-04155047bddc',
        login: 'qui',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aMutation = (overrides?: Partial<Mutation>): Mutation => {
    return {
        updateUser: aUser(),
        ...overrides,
    };
};

export const aQuery = (overrides?: Partial<Query>): Query => {
    return {
        user: aUser(),
        prefixed_query: aPrefixedResponse(),
        ...overrides,
    };
};
"
`;

exports[`should generate mock data with PascalCase enum values if enumValues is "pascal-case#pascalCase" 1`] = `
"
export const anAvatar = (overrides?: Partial<Avatar>): Avatar => {
    return {
        id: '0550ff93-dd31-49b4-8c38-ff1cb68bdc38',
        url: 'aliquid',
        ...overrides,
    };
};

export const aUser = (overrides?: Partial<User>): User => {
    return {
        id: 'a5756f00-41a6-422a-8a7d-d13ee6a63750',
        creationDate: '1970-01-09T16:33:21.532Z',
        login: 'libero',
        avatar: anAvatar(),
        status: Status.Online,
        customStatus: AbcStatus.HasXyzStatus,
        scalarValue: 'neque',
        camelCaseThing: aCamelCaseThing(),
        unionThing: anAvatar(),
        prefixedEnum: PrefixedEnum.PrefixedValue,
        ...overrides,
    };
};

export const aWithAvatar = (overrides?: Partial<WithAvatar>): WithAvatar => {
    return {
        id: '89f515e7-31e0-461d-a230-c4c7f4dafc5c',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aCamelCaseThing = (overrides?: Partial<CamelCaseThing>): CamelCaseThing => {
    return {
        id: '345b9cf9-00fa-4974-800f-aeee5ee7fd42',
        ...overrides,
    };
};

export const aPrefixedResponse = (overrides?: Partial<PrefixedResponse>): PrefixedResponse => {
    return {
        ping: 'sunt',
        ...overrides,
    };
};

export const anAbcType = (overrides?: Partial<AbcType>): AbcType => {
    return {
        abc: 'sit',
        ...overrides,
    };
};

export const aListType = (overrides?: Partial<ListType>): ListType => {
    return {
        stringList: ['voluptatem'],
        nullableStringList: ['eum'],
        ...overrides,
    };
};

export const anUpdateUserInput = (overrides?: Partial<UpdateUserInput>): UpdateUserInput => {
    return {
        id: '1d6a9360-c92b-4660-8e5f-04155047bddc',
        login: 'qui',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aMutation = (overrides?: Partial<Mutation>): Mutation => {
    return {
        updateUser: aUser(),
        ...overrides,
    };
};

export const aQuery = (overrides?: Partial<Query>): Query => {
    return {
        user: aUser(),
        prefixed_query: aPrefixedResponse(),
        ...overrides,
    };
};
"
`;

exports[`should generate mock data with PascalCase enum values if typeNames is "pascal-case#pascalCase" 1`] = `
"
export const anAvatar = (overrides?: Partial<Avatar>): Avatar => {
    return {
        id: '0550ff93-dd31-49b4-8c38-ff1cb68bdc38',
        url: 'aliquid',
        ...overrides,
    };
};

export const aUser = (overrides?: Partial<User>): User => {
    return {
        id: 'a5756f00-41a6-422a-8a7d-d13ee6a63750',
        creationDate: '1970-01-09T16:33:21.532Z',
        login: 'libero',
        avatar: anAvatar(),
        status: Status.Online,
        customStatus: AbcStatus.HasXyzStatus,
        scalarValue: 'neque',
        camelCaseThing: aCamelCaseThing(),
        unionThing: anAvatar(),
        prefixedEnum: PrefixedEnum.PrefixedValue,
        ...overrides,
    };
};

export const aWithAvatar = (overrides?: Partial<WithAvatar>): WithAvatar => {
    return {
        id: '89f515e7-31e0-461d-a230-c4c7f4dafc5c',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aCamelCaseThing = (overrides?: Partial<CamelCaseThing>): CamelCaseThing => {
    return {
        id: '345b9cf9-00fa-4974-800f-aeee5ee7fd42',
        ...overrides,
    };
};

export const aPrefixedResponse = (overrides?: Partial<PrefixedResponse>): PrefixedResponse => {
    return {
        ping: 'sunt',
        ...overrides,
    };
};

export const anAbcType = (overrides?: Partial<AbcType>): AbcType => {
    return {
        abc: 'sit',
        ...overrides,
    };
};

export const aListType = (overrides?: Partial<ListType>): ListType => {
    return {
        stringList: ['voluptatem'],
        nullableStringList: ['eum'],
        ...overrides,
    };
};

export const anUpdateUserInput = (overrides?: Partial<UpdateUserInput>): UpdateUserInput => {
    return {
        id: '1d6a9360-c92b-4660-8e5f-04155047bddc',
        login: 'qui',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aMutation = (overrides?: Partial<Mutation>): Mutation => {
    return {
        updateUser: aUser(),
        ...overrides,
    };
};

export const aQuery = (overrides?: Partial<Query>): Query => {
    return {
        user: aUser(),
        prefixed_query: aPrefixedResponse(),
        ...overrides,
    };
};
"
`;

exports[`should generate mock data with PascalCase types and enums by default 1`] = `
"import { Avatar, User, WithAvatar, CamelCaseThing, PrefixedResponse, AbcType, ListType, UpdateUserInput, Mutation, Query, AbcStatus, Status, PrefixedEnum } from './types/graphql';

export const anAvatar = (overrides?: Partial<Avatar>): Avatar => {
    return {
        id: '0550ff93-dd31-49b4-8c38-ff1cb68bdc38',
        url: 'aliquid',
        ...overrides,
    };
};

export const aUser = (overrides?: Partial<User>): User => {
    return {
        id: 'a5756f00-41a6-422a-8a7d-d13ee6a63750',
        creationDate: '1970-01-09T16:33:21.532Z',
        login: 'libero',
        avatar: anAvatar(),
        status: Status.Online,
        customStatus: AbcStatus.HasXyzStatus,
        scalarValue: 'neque',
        camelCaseThing: aCamelCaseThing(),
        unionThing: anAvatar(),
        prefixedEnum: PrefixedEnum.PrefixedValue,
        ...overrides,
    };
};

export const aWithAvatar = (overrides?: Partial<WithAvatar>): WithAvatar => {
    return {
        id: '89f515e7-31e0-461d-a230-c4c7f4dafc5c',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aCamelCaseThing = (overrides?: Partial<CamelCaseThing>): CamelCaseThing => {
    return {
        id: '345b9cf9-00fa-4974-800f-aeee5ee7fd42',
        ...overrides,
    };
};

export const aPrefixedResponse = (overrides?: Partial<PrefixedResponse>): PrefixedResponse => {
    return {
        ping: 'sunt',
        ...overrides,
    };
};

export const anAbcType = (overrides?: Partial<AbcType>): AbcType => {
    return {
        abc: 'sit',
        ...overrides,
    };
};

export const aListType = (overrides?: Partial<ListType>): ListType => {
    return {
        stringList: ['voluptatem'],
        nullableStringList: ['eum'],
        ...overrides,
    };
};

export const anUpdateUserInput = (overrides?: Partial<UpdateUserInput>): UpdateUserInput => {
    return {
        id: '1d6a9360-c92b-4660-8e5f-04155047bddc',
        login: 'qui',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aMutation = (overrides?: Partial<Mutation>): Mutation => {
    return {
        updateUser: aUser(),
        ...overrides,
    };
};

export const aQuery = (overrides?: Partial<Query>): Query => {
    return {
        user: aUser(),
        prefixed_query: aPrefixedResponse(),
        ...overrides,
    };
};
"
`;

exports[`should generate mock data with as-is enum values as string union type if enumsAsTypes is true and enumValues is "keep" 1`] = `
"
export const anAvatar = (overrides?: Partial<Avatar>): Avatar => {
    return {
        id: '0550ff93-dd31-49b4-8c38-ff1cb68bdc38',
        url: 'aliquid',
        ...overrides,
    };
};

export const aUser = (overrides?: Partial<User>): User => {
    return {
        id: 'a5756f00-41a6-422a-8a7d-d13ee6a63750',
        creationDate: '1970-01-09T16:33:21.532Z',
        login: 'libero',
        avatar: anAvatar(),
        status: 'ONLINE',
        customStatus: 'hasXYZStatus',
        scalarValue: 'neque',
        camelCaseThing: aCamelCaseThing(),
        unionThing: anAvatar(),
        prefixedEnum: 'PREFIXED_VALUE',
        ...overrides,
    };
};

export const aWithAvatar = (overrides?: Partial<WithAvatar>): WithAvatar => {
    return {
        id: '89f515e7-31e0-461d-a230-c4c7f4dafc5c',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aCamelCaseThing = (overrides?: Partial<CamelCaseThing>): CamelCaseThing => {
    return {
        id: '345b9cf9-00fa-4974-800f-aeee5ee7fd42',
        ...overrides,
    };
};

export const aPrefixedResponse = (overrides?: Partial<PrefixedResponse>): PrefixedResponse => {
    return {
        ping: 'sunt',
        ...overrides,
    };
};

export const anAbcType = (overrides?: Partial<AbcType>): AbcType => {
    return {
        abc: 'sit',
        ...overrides,
    };
};

export const aListType = (overrides?: Partial<ListType>): ListType => {
    return {
        stringList: ['voluptatem'],
        nullableStringList: ['eum'],
        ...overrides,
    };
};

export const anUpdateUserInput = (overrides?: Partial<UpdateUserInput>): UpdateUserInput => {
    return {
        id: '1d6a9360-c92b-4660-8e5f-04155047bddc',
        login: 'qui',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aMutation = (overrides?: Partial<Mutation>): Mutation => {
    return {
        updateUser: aUser(),
        ...overrides,
    };
};

export const aQuery = (overrides?: Partial<Query>): Query => {
    return {
        user: aUser(),
        prefixed_query: aPrefixedResponse(),
        ...overrides,
    };
};
"
`;

exports[`should generate mock data with as-is enum values if enumValues is "keep" 1`] = `
"
export const anAvatar = (overrides?: Partial<Avatar>): Avatar => {
    return {
        id: '0550ff93-dd31-49b4-8c38-ff1cb68bdc38',
        url: 'aliquid',
        ...overrides,
    };
};

export const aUser = (overrides?: Partial<User>): User => {
    return {
        id: 'a5756f00-41a6-422a-8a7d-d13ee6a63750',
        creationDate: '1970-01-09T16:33:21.532Z',
        login: 'libero',
        avatar: anAvatar(),
        status: Status.ONLINE,
        customStatus: AbcStatus.hasXYZStatus,
        scalarValue: 'neque',
        camelCaseThing: aCamelCaseThing(),
        unionThing: anAvatar(),
        prefixedEnum: PrefixedEnum.PREFIXED_VALUE,
        ...overrides,
    };
};

export const aWithAvatar = (overrides?: Partial<WithAvatar>): WithAvatar => {
    return {
        id: '89f515e7-31e0-461d-a230-c4c7f4dafc5c',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aCamelCaseThing = (overrides?: Partial<CamelCaseThing>): CamelCaseThing => {
    return {
        id: '345b9cf9-00fa-4974-800f-aeee5ee7fd42',
        ...overrides,
    };
};

export const aPrefixedResponse = (overrides?: Partial<PrefixedResponse>): PrefixedResponse => {
    return {
        ping: 'sunt',
        ...overrides,
    };
};

export const anAbcType = (overrides?: Partial<AbcType>): AbcType => {
    return {
        abc: 'sit',
        ...overrides,
    };
};

export const aListType = (overrides?: Partial<ListType>): ListType => {
    return {
        stringList: ['voluptatem'],
        nullableStringList: ['eum'],
        ...overrides,
    };
};

export const anUpdateUserInput = (overrides?: Partial<UpdateUserInput>): UpdateUserInput => {
    return {
        id: '1d6a9360-c92b-4660-8e5f-04155047bddc',
        login: 'qui',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aMutation = (overrides?: Partial<Mutation>): Mutation => {
    return {
        updateUser: aUser(),
        ...overrides,
    };
};

export const aQuery = (overrides?: Partial<Query>): Query => {
    return {
        user: aUser(),
        prefixed_query: aPrefixedResponse(),
        ...overrides,
    };
};
"
`;

exports[`should generate mock data with as-is types and enums if typeNames is "keep" 1`] = `
"
export const anAvatar = (overrides?: Partial<Avatar>): Avatar => {
    return {
        id: '0550ff93-dd31-49b4-8c38-ff1cb68bdc38',
        url: 'aliquid',
        ...overrides,
    };
};

export const aUser = (overrides?: Partial<User>): User => {
    return {
        id: 'a5756f00-41a6-422a-8a7d-d13ee6a63750',
        creationDate: '1970-01-09T16:33:21.532Z',
        login: 'libero',
        avatar: anAvatar(),
        status: Status.Online,
        customStatus: ABCStatus.HasXyzStatus,
        scalarValue: 'neque',
        camelCaseThing: acamelCaseThing(),
        unionThing: anAvatar(),
        prefixedEnum: Prefixed_Enum.PrefixedValue,
        ...overrides,
    };
};

export const aWithAvatar = (overrides?: Partial<WithAvatar>): WithAvatar => {
    return {
        id: '89f515e7-31e0-461d-a230-c4c7f4dafc5c',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const acamelCaseThing = (overrides?: Partial<camelCaseThing>): camelCaseThing => {
    return {
        id: '345b9cf9-00fa-4974-800f-aeee5ee7fd42',
        ...overrides,
    };
};

export const aPrefixed_Response = (overrides?: Partial<Prefixed_Response>): Prefixed_Response => {
    return {
        ping: 'sunt',
        ...overrides,
    };
};

export const anABCType = (overrides?: Partial<ABCType>): ABCType => {
    return {
        abc: 'sit',
        ...overrides,
    };
};

export const aListType = (overrides?: Partial<ListType>): ListType => {
    return {
        stringList: ['voluptatem'],
        nullableStringList: ['eum'],
        ...overrides,
    };
};

export const anUpdateUserInput = (overrides?: Partial<UpdateUserInput>): UpdateUserInput => {
    return {
        id: '1d6a9360-c92b-4660-8e5f-04155047bddc',
        login: 'qui',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aMutation = (overrides?: Partial<Mutation>): Mutation => {
    return {
        updateUser: aUser(),
        ...overrides,
    };
};

export const aQuery = (overrides?: Partial<Query>): Query => {
    return {
        user: aUser(),
        prefixed_query: aPrefixed_Response(),
        ...overrides,
    };
};
"
`;

exports[`should generate mock data with enum values as string union type if enumsAsTypes is true 1`] = `
"
export const anAvatar = (overrides?: Partial<Avatar>): Avatar => {
    return {
        id: '0550ff93-dd31-49b4-8c38-ff1cb68bdc38',
        url: 'aliquid',
        ...overrides,
    };
};

export const aUser = (overrides?: Partial<User>): User => {
    return {
        id: 'a5756f00-41a6-422a-8a7d-d13ee6a63750',
        creationDate: '1970-01-09T16:33:21.532Z',
        login: 'libero',
        avatar: anAvatar(),
        status: 'ONLINE',
        customStatus: 'hasXYZStatus',
        scalarValue: 'neque',
        camelCaseThing: aCamelCaseThing(),
        unionThing: anAvatar(),
        prefixedEnum: 'PREFIXED_VALUE',
        ...overrides,
    };
};

export const aWithAvatar = (overrides?: Partial<WithAvatar>): WithAvatar => {
    return {
        id: '89f515e7-31e0-461d-a230-c4c7f4dafc5c',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aCamelCaseThing = (overrides?: Partial<CamelCaseThing>): CamelCaseThing => {
    return {
        id: '345b9cf9-00fa-4974-800f-aeee5ee7fd42',
        ...overrides,
    };
};

export const aPrefixedResponse = (overrides?: Partial<PrefixedResponse>): PrefixedResponse => {
    return {
        ping: 'sunt',
        ...overrides,
    };
};

export const anAbcType = (overrides?: Partial<AbcType>): AbcType => {
    return {
        abc: 'sit',
        ...overrides,
    };
};

export const aListType = (overrides?: Partial<ListType>): ListType => {
    return {
        stringList: ['voluptatem'],
        nullableStringList: ['eum'],
        ...overrides,
    };
};

export const anUpdateUserInput = (overrides?: Partial<UpdateUserInput>): UpdateUserInput => {
    return {
        id: '1d6a9360-c92b-4660-8e5f-04155047bddc',
        login: 'qui',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aMutation = (overrides?: Partial<Mutation>): Mutation => {
    return {
        updateUser: aUser(),
        ...overrides,
    };
};

export const aQuery = (overrides?: Partial<Query>): Query => {
    return {
        user: aUser(),
        prefixed_query: aPrefixedResponse(),
        ...overrides,
    };
};
"
`;

exports[`should generate mock data with typename if addTypename is true 1`] = `
"
export const anAvatar = (overrides?: Partial<Avatar>): { __typename: 'Avatar' } & Avatar => {
    return {
        __typename: 'Avatar',
        id: '0550ff93-dd31-49b4-8c38-ff1cb68bdc38',
        url: 'aliquid',
        ...overrides,
    };
};

export const aUser = (overrides?: Partial<User>): { __typename: 'User' } & User => {
    return {
        __typename: 'User',
        id: 'a5756f00-41a6-422a-8a7d-d13ee6a63750',
        creationDate: '1970-01-09T16:33:21.532Z',
        login: 'libero',
        avatar: anAvatar(),
        status: Status.Online,
        customStatus: AbcStatus.HasXyzStatus,
        scalarValue: 'neque',
        camelCaseThing: aCamelCaseThing(),
        unionThing: anAvatar(),
        prefixedEnum: PrefixedEnum.PrefixedValue,
        ...overrides,
    };
};

export const aWithAvatar = (overrides?: Partial<WithAvatar>): { __typename: 'WithAvatar' } & WithAvatar => {
    return {
        __typename: 'WithAvatar',
        id: '89f515e7-31e0-461d-a230-c4c7f4dafc5c',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aCamelCaseThing = (overrides?: Partial<CamelCaseThing>): { __typename: 'camelCaseThing' } & CamelCaseThing => {
    return {
        __typename: 'camelCaseThing',
        id: '345b9cf9-00fa-4974-800f-aeee5ee7fd42',
        ...overrides,
    };
};

export const aPrefixedResponse = (overrides?: Partial<PrefixedResponse>): { __typename: 'Prefixed_Response' } & PrefixedResponse => {
    return {
        __typename: 'Prefixed_Response',
        ping: 'sunt',
        ...overrides,
    };
};

export const anAbcType = (overrides?: Partial<AbcType>): { __typename: 'ABCType' } & AbcType => {
    return {
        __typename: 'ABCType',
        abc: 'sit',
        ...overrides,
    };
};

export const aListType = (overrides?: Partial<ListType>): { __typename: 'ListType' } & ListType => {
    return {
        __typename: 'ListType',
        stringList: ['voluptatem'],
        nullableStringList: ['eum'],
        ...overrides,
    };
};

export const anUpdateUserInput = (overrides?: Partial<UpdateUserInput>): UpdateUserInput => {
    return {
        id: '1d6a9360-c92b-4660-8e5f-04155047bddc',
        login: 'qui',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aMutation = (overrides?: Partial<Mutation>): { __typename: 'Mutation' } & Mutation => {
    return {
        __typename: 'Mutation',
        updateUser: aUser(),
        ...overrides,
    };
};

export const aQuery = (overrides?: Partial<Query>): { __typename: 'Query' } & Query => {
    return {
        __typename: 'Query',
        user: aUser(),
        prefixed_query: aPrefixedResponse(),
        ...overrides,
    };
};
"
`;

exports[`should generate mock data with upperCase enum values if enumValues is "upper-case#upperCase" 1`] = `
"
export const anAvatar = (overrides?: Partial<Avatar>): Avatar => {
    return {
        id: '0550ff93-dd31-49b4-8c38-ff1cb68bdc38',
        url: 'aliquid',
        ...overrides,
    };
};

export const aUser = (overrides?: Partial<User>): User => {
    return {
        id: 'a5756f00-41a6-422a-8a7d-d13ee6a63750',
        creationDate: '1970-01-09T16:33:21.532Z',
        login: 'libero',
        avatar: anAvatar(),
        status: Status.ONLINE,
        customStatus: AbcStatus.HASXYZSTATUS,
        scalarValue: 'neque',
        camelCaseThing: aCamelCaseThing(),
        unionThing: anAvatar(),
        prefixedEnum: PrefixedEnum.PREFIXED_VALUE,
        ...overrides,
    };
};

export const aWithAvatar = (overrides?: Partial<WithAvatar>): WithAvatar => {
    return {
        id: '89f515e7-31e0-461d-a230-c4c7f4dafc5c',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aCamelCaseThing = (overrides?: Partial<CamelCaseThing>): CamelCaseThing => {
    return {
        id: '345b9cf9-00fa-4974-800f-aeee5ee7fd42',
        ...overrides,
    };
};

export const aPrefixedResponse = (overrides?: Partial<PrefixedResponse>): PrefixedResponse => {
    return {
        ping: 'sunt',
        ...overrides,
    };
};

export const anAbcType = (overrides?: Partial<AbcType>): AbcType => {
    return {
        abc: 'sit',
        ...overrides,
    };
};

export const aListType = (overrides?: Partial<ListType>): ListType => {
    return {
        stringList: ['voluptatem'],
        nullableStringList: ['eum'],
        ...overrides,
    };
};

export const anUpdateUserInput = (overrides?: Partial<UpdateUserInput>): UpdateUserInput => {
    return {
        id: '1d6a9360-c92b-4660-8e5f-04155047bddc',
        login: 'qui',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aMutation = (overrides?: Partial<Mutation>): Mutation => {
    return {
        updateUser: aUser(),
        ...overrides,
    };
};

export const aQuery = (overrides?: Partial<Query>): Query => {
    return {
        user: aUser(),
        prefixed_query: aPrefixedResponse(),
        ...overrides,
    };
};
"
`;

exports[`should generate mock data with upperCase types and enums if typeNames is "upper-case#upperCase" 1`] = `
"
export const anAVATAR = (overrides?: Partial<AVATAR>): AVATAR => {
    return {
        id: '0550ff93-dd31-49b4-8c38-ff1cb68bdc38',
        url: 'aliquid',
        ...overrides,
    };
};

export const aUSER = (overrides?: Partial<USER>): USER => {
    return {
        id: 'a5756f00-41a6-422a-8a7d-d13ee6a63750',
        creationDate: '1970-01-09T16:33:21.532Z',
        login: 'libero',
        avatar: anAVATAR(),
        status: STATUS.Online,
        customStatus: ABCSTATUS.HasXyzStatus,
        scalarValue: 'neque',
        camelCaseThing: aCAMELCASETHING(),
        unionThing: anAVATAR(),
        prefixedEnum: PREFIXED_ENUM.PrefixedValue,
        ...overrides,
    };
};

export const aWITHAVATAR = (overrides?: Partial<WITHAVATAR>): WITHAVATAR => {
    return {
        id: '89f515e7-31e0-461d-a230-c4c7f4dafc5c',
        avatar: anAVATAR(),
        ...overrides,
    };
};

export const aCAMELCASETHING = (overrides?: Partial<CAMELCASETHING>): CAMELCASETHING => {
    return {
        id: '345b9cf9-00fa-4974-800f-aeee5ee7fd42',
        ...overrides,
    };
};

export const aPREFIXED_RESPONSE = (overrides?: Partial<PREFIXED_RESPONSE>): PREFIXED_RESPONSE => {
    return {
        ping: 'sunt',
        ...overrides,
    };
};

export const anABCTYPE = (overrides?: Partial<ABCTYPE>): ABCTYPE => {
    return {
        abc: 'sit',
        ...overrides,
    };
};

export const aLISTTYPE = (overrides?: Partial<LISTTYPE>): LISTTYPE => {
    return {
        stringList: ['voluptatem'],
        nullableStringList: ['eum'],
        ...overrides,
    };
};

export const anUPDATEUSERINPUT = (overrides?: Partial<UPDATEUSERINPUT>): UPDATEUSERINPUT => {
    return {
        id: '1d6a9360-c92b-4660-8e5f-04155047bddc',
        login: 'qui',
        avatar: anAVATAR(),
        ...overrides,
    };
};

export const aMUTATION = (overrides?: Partial<MUTATION>): MUTATION => {
    return {
        updateUser: aUSER(),
        ...overrides,
    };
};

export const aQUERY = (overrides?: Partial<QUERY>): QUERY => {
    return {
        user: aUSER(),
        prefixed_query: aPREFIXED_RESPONSE(),
        ...overrides,
    };
};
"
`;

exports[`should generate mock data with upperCase types and imports if typeNames is "upper-case#upperCase" 1`] = `
"import { AVATAR, USER, WITHAVATAR, CAMELCASETHING, PREFIXED_RESPONSE, ABCTYPE, LISTTYPE, UPDATEUSERINPUT, MUTATION, QUERY, ABCSTATUS, STATUS, PREFIXED_ENUM } from './types/graphql';

export const anAVATAR = (overrides?: Partial<AVATAR>): AVATAR => {
    return {
        id: '0550ff93-dd31-49b4-8c38-ff1cb68bdc38',
        url: 'aliquid',
        ...overrides,
    };
};

export const aUSER = (overrides?: Partial<USER>): USER => {
    return {
        id: 'a5756f00-41a6-422a-8a7d-d13ee6a63750',
        creationDate: '1970-01-09T16:33:21.532Z',
        login: 'libero',
        avatar: anAVATAR(),
        status: STATUS.Online,
        customStatus: ABCSTATUS.HasXyzStatus,
        scalarValue: 'neque',
        camelCaseThing: aCAMELCASETHING(),
        unionThing: anAVATAR(),
        prefixedEnum: PREFIXED_ENUM.PrefixedValue,
        ...overrides,
    };
};

export const aWITHAVATAR = (overrides?: Partial<WITHAVATAR>): WITHAVATAR => {
    return {
        id: '89f515e7-31e0-461d-a230-c4c7f4dafc5c',
        avatar: anAVATAR(),
        ...overrides,
    };
};

export const aCAMELCASETHING = (overrides?: Partial<CAMELCASETHING>): CAMELCASETHING => {
    return {
        id: '345b9cf9-00fa-4974-800f-aeee5ee7fd42',
        ...overrides,
    };
};

export const aPREFIXED_RESPONSE = (overrides?: Partial<PREFIXED_RESPONSE>): PREFIXED_RESPONSE => {
    return {
        ping: 'sunt',
        ...overrides,
    };
};

export const anABCTYPE = (overrides?: Partial<ABCTYPE>): ABCTYPE => {
    return {
        abc: 'sit',
        ...overrides,
    };
};

export const aLISTTYPE = (overrides?: Partial<LISTTYPE>): LISTTYPE => {
    return {
        stringList: ['voluptatem'],
        nullableStringList: ['eum'],
        ...overrides,
    };
};

export const anUPDATEUSERINPUT = (overrides?: Partial<UPDATEUSERINPUT>): UPDATEUSERINPUT => {
    return {
        id: '1d6a9360-c92b-4660-8e5f-04155047bddc',
        login: 'qui',
        avatar: anAVATAR(),
        ...overrides,
    };
};

export const aMUTATION = (overrides?: Partial<MUTATION>): MUTATION => {
    return {
        updateUser: aUSER(),
        ...overrides,
    };
};

export const aQUERY = (overrides?: Partial<QUERY>): QUERY => {
    return {
        user: aUSER(),
        prefixed_query: aPREFIXED_RESPONSE(),
        ...overrides,
    };
};
"
`;

exports[`should generate multiple list elements 1`] = `
"import { Avatar, User, WithAvatar, CamelCaseThing, PrefixedResponse, AbcType, ListType, UpdateUserInput, Mutation, Query, AbcStatus, Status, PrefixedEnum } from './types/graphql';

export const anAvatar = (overrides?: Partial<Avatar>): Avatar => {
    return {
        id: '0550ff93-dd31-49b4-8c38-ff1cb68bdc38',
        url: 'aliquid',
        ...overrides,
    };
};

export const aUser = (overrides?: Partial<User>): User => {
    return {
        id: 'a5756f00-41a6-422a-8a7d-d13ee6a63750',
        creationDate: '1970-01-09T16:33:21.532Z',
        login: 'libero',
        avatar: anAvatar(),
        status: Status.Online,
        customStatus: AbcStatus.HasXyzStatus,
        scalarValue: 'neque',
        camelCaseThing: aCamelCaseThing(),
        unionThing: anAvatar(),
        prefixedEnum: PrefixedEnum.PrefixedValue,
        ...overrides,
    };
};

export const aWithAvatar = (overrides?: Partial<WithAvatar>): WithAvatar => {
    return {
        id: '89f515e7-31e0-461d-a230-c4c7f4dafc5c',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aCamelCaseThing = (overrides?: Partial<CamelCaseThing>): CamelCaseThing => {
    return {
        id: '345b9cf9-00fa-4974-800f-aeee5ee7fd42',
        ...overrides,
    };
};

export const aPrefixedResponse = (overrides?: Partial<PrefixedResponse>): PrefixedResponse => {
    return {
        ping: 'sunt',
        ...overrides,
    };
};

export const anAbcType = (overrides?: Partial<AbcType>): AbcType => {
    return {
        abc: 'sit',
        ...overrides,
    };
};

export const aListType = (overrides?: Partial<ListType>): ListType => {
    return {
        stringList: ['id', 'soluta', 'quis'],
        nullableStringList: ['soluta', 'deserunt', 'ut'],
        ...overrides,
    };
};

export const anUpdateUserInput = (overrides?: Partial<UpdateUserInput>): UpdateUserInput => {
    return {
        id: '1d6a9360-c92b-4660-8e5f-04155047bddc',
        login: 'qui',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aMutation = (overrides?: Partial<Mutation>): Mutation => {
    return {
        updateUser: aUser(),
        ...overrides,
    };
};

export const aQuery = (overrides?: Partial<Query>): Query => {
    return {
        user: aUser(),
        prefixed_query: aPrefixedResponse(),
        ...overrides,
    };
};
"
`;

exports[`should generate no list elements when listElementCount is 0 1`] = `
"import { Avatar, User, WithAvatar, CamelCaseThing, PrefixedResponse, AbcType, ListType, UpdateUserInput, Mutation, Query, AbcStatus, Status, PrefixedEnum } from './types/graphql';

export const anAvatar = (overrides?: Partial<Avatar>): Avatar => {
    return {
        id: '0550ff93-dd31-49b4-8c38-ff1cb68bdc38',
        url: 'aliquid',
        ...overrides,
    };
};

export const aUser = (overrides?: Partial<User>): User => {
    return {
        id: 'a5756f00-41a6-422a-8a7d-d13ee6a63750',
        creationDate: '1970-01-09T16:33:21.532Z',
        login: 'libero',
        avatar: anAvatar(),
        status: Status.Online,
        customStatus: AbcStatus.HasXyzStatus,
        scalarValue: 'neque',
        camelCaseThing: aCamelCaseThing(),
        unionThing: anAvatar(),
        prefixedEnum: PrefixedEnum.PrefixedValue,
        ...overrides,
    };
};

export const aWithAvatar = (overrides?: Partial<WithAvatar>): WithAvatar => {
    return {
        id: '89f515e7-31e0-461d-a230-c4c7f4dafc5c',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aCamelCaseThing = (overrides?: Partial<CamelCaseThing>): CamelCaseThing => {
    return {
        id: '345b9cf9-00fa-4974-800f-aeee5ee7fd42',
        ...overrides,
    };
};

export const aPrefixedResponse = (overrides?: Partial<PrefixedResponse>): PrefixedResponse => {
    return {
        ping: 'sunt',
        ...overrides,
    };
};

export const anAbcType = (overrides?: Partial<AbcType>): AbcType => {
    return {
        abc: 'sit',
        ...overrides,
    };
};

export const aListType = (overrides?: Partial<ListType>): ListType => {
    return {
        stringList: [],
        nullableStringList: [],
        ...overrides,
    };
};

export const anUpdateUserInput = (overrides?: Partial<UpdateUserInput>): UpdateUserInput => {
    return {
        id: '1d6a9360-c92b-4660-8e5f-04155047bddc',
        login: 'qui',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aMutation = (overrides?: Partial<Mutation>): Mutation => {
    return {
        updateUser: aUser(),
        ...overrides,
    };
};

export const aQuery = (overrides?: Partial<Query>): Query => {
    return {
        user: aUser(),
        prefixed_query: aPrefixedResponse(),
        ...overrides,
    };
};
"
`;

exports[`should generate single list element 1`] = `
"import { Avatar, User, WithAvatar, CamelCaseThing, PrefixedResponse, AbcType, ListType, UpdateUserInput, Mutation, Query, AbcStatus, Status, PrefixedEnum } from './types/graphql';

export const anAvatar = (overrides?: Partial<Avatar>): Avatar => {
    return {
        id: '0550ff93-dd31-49b4-8c38-ff1cb68bdc38',
        url: 'aliquid',
        ...overrides,
    };
};

export const aUser = (overrides?: Partial<User>): User => {
    return {
        id: 'a5756f00-41a6-422a-8a7d-d13ee6a63750',
        creationDate: '1970-01-09T16:33:21.532Z',
        login: 'libero',
        avatar: anAvatar(),
        status: Status.Online,
        customStatus: AbcStatus.HasXyzStatus,
        scalarValue: 'neque',
        camelCaseThing: aCamelCaseThing(),
        unionThing: anAvatar(),
        prefixedEnum: PrefixedEnum.PrefixedValue,
        ...overrides,
    };
};

export const aWithAvatar = (overrides?: Partial<WithAvatar>): WithAvatar => {
    return {
        id: '89f515e7-31e0-461d-a230-c4c7f4dafc5c',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aCamelCaseThing = (overrides?: Partial<CamelCaseThing>): CamelCaseThing => {
    return {
        id: '345b9cf9-00fa-4974-800f-aeee5ee7fd42',
        ...overrides,
    };
};

export const aPrefixedResponse = (overrides?: Partial<PrefixedResponse>): PrefixedResponse => {
    return {
        ping: 'sunt',
        ...overrides,
    };
};

export const anAbcType = (overrides?: Partial<AbcType>): AbcType => {
    return {
        abc: 'sit',
        ...overrides,
    };
};

export const aListType = (overrides?: Partial<ListType>): ListType => {
    return {
        stringList: ['voluptatem'],
        nullableStringList: ['eum'],
        ...overrides,
    };
};

export const anUpdateUserInput = (overrides?: Partial<UpdateUserInput>): UpdateUserInput => {
    return {
        id: '1d6a9360-c92b-4660-8e5f-04155047bddc',
        login: 'qui',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aMutation = (overrides?: Partial<Mutation>): Mutation => {
    return {
        updateUser: aUser(),
        ...overrides,
    };
};

export const aQuery = (overrides?: Partial<Query>): Query => {
    return {
        user: aUser(),
        prefixed_query: aPrefixedResponse(),
        ...overrides,
    };
};
"
`;

exports[`should not merge imports into one if enumsPrefix does not contain dots 1`] = `
"import { Avatar, User, WithAvatar, CamelCaseThing, PrefixedResponse, AbcType, ListType, UpdateUserInput, Mutation, Query, ApiAbcStatus, ApiStatus, ApiPrefixedEnum } from './types/graphql';

export const anAvatar = (overrides?: Partial<Avatar>): Avatar => {
    return {
        id: '0550ff93-dd31-49b4-8c38-ff1cb68bdc38',
        url: 'aliquid',
        ...overrides,
    };
};

export const aUser = (overrides?: Partial<User>): User => {
    return {
        id: 'a5756f00-41a6-422a-8a7d-d13ee6a63750',
        creationDate: '1970-01-09T16:33:21.532Z',
        login: 'libero',
        avatar: anAvatar(),
        status: ApiStatus.Online,
        customStatus: ApiAbcStatus.HasXyzStatus,
        scalarValue: 'neque',
        camelCaseThing: aCamelCaseThing(),
        unionThing: anAvatar(),
        prefixedEnum: ApiPrefixedEnum.PrefixedValue,
        ...overrides,
    };
};

export const aWithAvatar = (overrides?: Partial<WithAvatar>): WithAvatar => {
    return {
        id: '89f515e7-31e0-461d-a230-c4c7f4dafc5c',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aCamelCaseThing = (overrides?: Partial<CamelCaseThing>): CamelCaseThing => {
    return {
        id: '345b9cf9-00fa-4974-800f-aeee5ee7fd42',
        ...overrides,
    };
};

export const aPrefixedResponse = (overrides?: Partial<PrefixedResponse>): PrefixedResponse => {
    return {
        ping: 'sunt',
        ...overrides,
    };
};

export const anAbcType = (overrides?: Partial<AbcType>): AbcType => {
    return {
        abc: 'sit',
        ...overrides,
    };
};

export const aListType = (overrides?: Partial<ListType>): ListType => {
    return {
        stringList: ['voluptatem'],
        nullableStringList: ['eum'],
        ...overrides,
    };
};

export const anUpdateUserInput = (overrides?: Partial<UpdateUserInput>): UpdateUserInput => {
    return {
        id: '1d6a9360-c92b-4660-8e5f-04155047bddc',
        login: 'qui',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aMutation = (overrides?: Partial<Mutation>): Mutation => {
    return {
        updateUser: aUser(),
        ...overrides,
    };
};

export const aQuery = (overrides?: Partial<Query>): Query => {
    return {
        user: aUser(),
        prefixed_query: aPrefixedResponse(),
        ...overrides,
    };
};
"
`;

exports[`should not merge imports into one if typesPrefix does not contain dots 1`] = `
"import { ApiAvatar, ApiUser, ApiWithAvatar, ApiCamelCaseThing, ApiPrefixedResponse, ApiAbcType, ApiListType, ApiUpdateUserInput, ApiMutation, ApiQuery, AbcStatus, Status, PrefixedEnum } from './types/graphql';

export const anAvatar = (overrides?: Partial<ApiAvatar>): ApiAvatar => {
    return {
        id: '0550ff93-dd31-49b4-8c38-ff1cb68bdc38',
        url: 'aliquid',
        ...overrides,
    };
};

export const aUser = (overrides?: Partial<ApiUser>): ApiUser => {
    return {
        id: 'a5756f00-41a6-422a-8a7d-d13ee6a63750',
        creationDate: '1970-01-09T16:33:21.532Z',
        login: 'libero',
        avatar: anAvatar(),
        status: Status.Online,
        customStatus: AbcStatus.HasXyzStatus,
        scalarValue: 'neque',
        camelCaseThing: aCamelCaseThing(),
        unionThing: anAvatar(),
        prefixedEnum: PrefixedEnum.PrefixedValue,
        ...overrides,
    };
};

export const aWithAvatar = (overrides?: Partial<ApiWithAvatar>): ApiWithAvatar => {
    return {
        id: '89f515e7-31e0-461d-a230-c4c7f4dafc5c',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aCamelCaseThing = (overrides?: Partial<ApiCamelCaseThing>): ApiCamelCaseThing => {
    return {
        id: '345b9cf9-00fa-4974-800f-aeee5ee7fd42',
        ...overrides,
    };
};

export const aPrefixedResponse = (overrides?: Partial<ApiPrefixedResponse>): ApiPrefixedResponse => {
    return {
        ping: 'sunt',
        ...overrides,
    };
};

export const anAbcType = (overrides?: Partial<ApiAbcType>): ApiAbcType => {
    return {
        abc: 'sit',
        ...overrides,
    };
};

export const aListType = (overrides?: Partial<ApiListType>): ApiListType => {
    return {
        stringList: ['voluptatem'],
        nullableStringList: ['eum'],
        ...overrides,
    };
};

export const anUpdateUserInput = (overrides?: Partial<ApiUpdateUserInput>): ApiUpdateUserInput => {
    return {
        id: '1d6a9360-c92b-4660-8e5f-04155047bddc',
        login: 'qui',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aMutation = (overrides?: Partial<ApiMutation>): ApiMutation => {
    return {
        updateUser: aUser(),
        ...overrides,
    };
};

export const aQuery = (overrides?: Partial<ApiQuery>): ApiQuery => {
    return {
        user: aUser(),
        prefixed_query: aPrefixedResponse(),
        ...overrides,
    };
};
"
`;

exports[`should preserve underscores if transformUnderscore is false 1`] = `
"import { Avatar, User, WithAvatar, CamelCaseThing, Prefixed_Response, AbcType, ListType, UpdateUserInput, Mutation, Query, AbcStatus, Status, Prefixed_Enum } from './types/graphql';

export const anAvatar = (overrides?: Partial<Avatar>): Avatar => {
    return {
        id: '0550ff93-dd31-49b4-8c38-ff1cb68bdc38',
        url: 'aliquid',
        ...overrides,
    };
};

export const aUser = (overrides?: Partial<User>): User => {
    return {
        id: 'a5756f00-41a6-422a-8a7d-d13ee6a63750',
        creationDate: '1970-01-09T16:33:21.532Z',
        login: 'libero',
        avatar: anAvatar(),
        status: Status.Online,
        customStatus: AbcStatus.HasXyzStatus,
        scalarValue: 'neque',
        camelCaseThing: aCamelCaseThing(),
        unionThing: anAvatar(),
        prefixedEnum: Prefixed_Enum.PrefixedValue,
        ...overrides,
    };
};

export const aWithAvatar = (overrides?: Partial<WithAvatar>): WithAvatar => {
    return {
        id: '89f515e7-31e0-461d-a230-c4c7f4dafc5c',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aCamelCaseThing = (overrides?: Partial<CamelCaseThing>): CamelCaseThing => {
    return {
        id: '345b9cf9-00fa-4974-800f-aeee5ee7fd42',
        ...overrides,
    };
};

export const aPrefixed_Response = (overrides?: Partial<Prefixed_Response>): Prefixed_Response => {
    return {
        ping: 'sunt',
        ...overrides,
    };
};

export const anAbcType = (overrides?: Partial<AbcType>): AbcType => {
    return {
        abc: 'sit',
        ...overrides,
    };
};

export const aListType = (overrides?: Partial<ListType>): ListType => {
    return {
        stringList: ['voluptatem'],
        nullableStringList: ['eum'],
        ...overrides,
    };
};

export const anUpdateUserInput = (overrides?: Partial<UpdateUserInput>): UpdateUserInput => {
    return {
        id: '1d6a9360-c92b-4660-8e5f-04155047bddc',
        login: 'qui',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aMutation = (overrides?: Partial<Mutation>): Mutation => {
    return {
        updateUser: aUser(),
        ...overrides,
    };
};

export const aQuery = (overrides?: Partial<Query>): Query => {
    return {
        user: aUser(),
        prefixed_query: aPrefixed_Response(),
        ...overrides,
    };
};
"
`;

exports[`should preserve underscores if transformUnderscore is false and enumsAsTypes is true 1`] = `
"import { Avatar, User, WithAvatar, CamelCaseThing, Prefixed_Response, AbcType, ListType, UpdateUserInput, Mutation, Query } from './types/graphql';

export const anAvatar = (overrides?: Partial<Avatar>): Avatar => {
    return {
        id: '0550ff93-dd31-49b4-8c38-ff1cb68bdc38',
        url: 'aliquid',
        ...overrides,
    };
};

export const aUser = (overrides?: Partial<User>): User => {
    return {
        id: 'a5756f00-41a6-422a-8a7d-d13ee6a63750',
        creationDate: '1970-01-09T16:33:21.532Z',
        login: 'libero',
        avatar: anAvatar(),
        status: 'ONLINE',
        customStatus: 'hasXYZStatus',
        scalarValue: 'neque',
        camelCaseThing: aCamelCaseThing(),
        unionThing: anAvatar(),
        prefixedEnum: 'PREFIXED_VALUE',
        ...overrides,
    };
};

export const aWithAvatar = (overrides?: Partial<WithAvatar>): WithAvatar => {
    return {
        id: '89f515e7-31e0-461d-a230-c4c7f4dafc5c',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aCamelCaseThing = (overrides?: Partial<CamelCaseThing>): CamelCaseThing => {
    return {
        id: '345b9cf9-00fa-4974-800f-aeee5ee7fd42',
        ...overrides,
    };
};

export const aPrefixed_Response = (overrides?: Partial<Prefixed_Response>): Prefixed_Response => {
    return {
        ping: 'sunt',
        ...overrides,
    };
};

export const anAbcType = (overrides?: Partial<AbcType>): AbcType => {
    return {
        abc: 'sit',
        ...overrides,
    };
};

export const aListType = (overrides?: Partial<ListType>): ListType => {
    return {
        stringList: ['voluptatem'],
        nullableStringList: ['eum'],
        ...overrides,
    };
};

export const anUpdateUserInput = (overrides?: Partial<UpdateUserInput>): UpdateUserInput => {
    return {
        id: '1d6a9360-c92b-4660-8e5f-04155047bddc',
        login: 'qui',
        avatar: anAvatar(),
        ...overrides,
    };
};

export const aMutation = (overrides?: Partial<Mutation>): Mutation => {
    return {
        updateUser: aUser(),
        ...overrides,
    };
};

export const aQuery = (overrides?: Partial<Query>): Query => {
    return {
        user: aUser(),
        prefixed_query: aPrefixed_Response(),
        ...overrides,
    };
};
"
`;

exports[`should use relationshipsToOmit argument to terminate circular relationships with terminateCircularRelationships enabled 1`] = `
"
export const anAvatar = (overrides?: Partial<Avatar>, _relationshipsToOmit: Set<string> = new Set()): Avatar => {
    const relationshipsToOmit: Set<string> = new Set(_relationshipsToOmit);
    relationshipsToOmit.add('Avatar');
    return {
        id: '0550ff93-dd31-49b4-8c38-ff1cb68bdc38',
        url: 'aliquid',
        ...overrides,
    };
};

export const aUser = (overrides?: Partial<User>, _relationshipsToOmit: Set<string> = new Set()): User => {
    const relationshipsToOmit: Set<string> = new Set(_relationshipsToOmit);
    relationshipsToOmit.add('User');
    return {
        id: 'a5756f00-41a6-422a-8a7d-d13ee6a63750',
        creationDate: '1970-01-09T16:33:21.532Z',
        login: 'libero',
        avatar: relationshipsToOmit.has('Avatar') ? {} as Avatar : anAvatar({}, relationshipsToOmit),
        status: Status.Online,
        customStatus: AbcStatus.HasXyzStatus,
        scalarValue: 'neque',
        camelCaseThing: relationshipsToOmit.has('CamelCaseThing') ? {} as CamelCaseThing : aCamelCaseThing({}, relationshipsToOmit),
        unionThing: relationshipsToOmit.has('Avatar') ? {} as Avatar : anAvatar({}, relationshipsToOmit),
        prefixedEnum: PrefixedEnum.PrefixedValue,
        ...overrides,
    };
};

export const aWithAvatar = (overrides?: Partial<WithAvatar>, _relationshipsToOmit: Set<string> = new Set()): WithAvatar => {
    const relationshipsToOmit: Set<string> = new Set(_relationshipsToOmit);
    relationshipsToOmit.add('WithAvatar');
    return {
        id: '89f515e7-31e0-461d-a230-c4c7f4dafc5c',
        avatar: relationshipsToOmit.has('Avatar') ? {} as Avatar : anAvatar({}, relationshipsToOmit),
        ...overrides,
    };
};

export const aCamelCaseThing = (overrides?: Partial<CamelCaseThing>, _relationshipsToOmit: Set<string> = new Set()): CamelCaseThing => {
    const relationshipsToOmit: Set<string> = new Set(_relationshipsToOmit);
    relationshipsToOmit.add('CamelCaseThing');
    return {
        id: '345b9cf9-00fa-4974-800f-aeee5ee7fd42',
        ...overrides,
    };
};

export const aPrefixedResponse = (overrides?: Partial<PrefixedResponse>, _relationshipsToOmit: Set<string> = new Set()): PrefixedResponse => {
    const relationshipsToOmit: Set<string> = new Set(_relationshipsToOmit);
    relationshipsToOmit.add('PrefixedResponse');
    return {
        ping: 'sunt',
        ...overrides,
    };
};

export const anAbcType = (overrides?: Partial<AbcType>, _relationshipsToOmit: Set<string> = new Set()): AbcType => {
    const relationshipsToOmit: Set<string> = new Set(_relationshipsToOmit);
    relationshipsToOmit.add('AbcType');
    return {
        abc: 'sit',
        ...overrides,
    };
};

export const aListType = (overrides?: Partial<ListType>, _relationshipsToOmit: Set<string> = new Set()): ListType => {
    const relationshipsToOmit: Set<string> = new Set(_relationshipsToOmit);
    relationshipsToOmit.add('ListType');
    return {
        stringList: ['voluptatem'],
        nullableStringList: ['eum'],
        ...overrides,
    };
};

export const anUpdateUserInput = (overrides?: Partial<UpdateUserInput>, _relationshipsToOmit: Set<string> = new Set()): UpdateUserInput => {
    const relationshipsToOmit: Set<string> = new Set(_relationshipsToOmit);
    relationshipsToOmit.add('UpdateUserInput');
    return {
        id: '1d6a9360-c92b-4660-8e5f-04155047bddc',
        login: 'qui',
        avatar: relationshipsToOmit.has('Avatar') ? {} as Avatar : anAvatar({}, relationshipsToOmit),
        ...overrides,
    };
};

export const aMutation = (overrides?: Partial<Mutation>, _relationshipsToOmit: Set<string> = new Set()): Mutation => {
    const relationshipsToOmit: Set<string> = new Set(_relationshipsToOmit);
    relationshipsToOmit.add('Mutation');
    return {
        updateUser: relationshipsToOmit.has('User') ? {} as User : aUser({}, relationshipsToOmit),
        ...overrides,
    };
};

export const aQuery = (overrides?: Partial<Query>, _relationshipsToOmit: Set<string> = new Set()): Query => {
    const relationshipsToOmit: Set<string> = new Set(_relationshipsToOmit);
    relationshipsToOmit.add('Query');
    return {
        user: relationshipsToOmit.has('User') ? {} as User : aUser({}, relationshipsToOmit),
        prefixed_query: relationshipsToOmit.has('PrefixedResponse') ? {} as PrefixedResponse : aPrefixedResponse({}, relationshipsToOmit),
        ...overrides,
    };
};
"
`;
